--- a/interactions/characters/hydro/mona/main.yaml
+++ b/interactions/characters/hydro/mona/main.yaml
@@ -1,14 +1,18 @@
 embeds:
   - title: Mona
     color: ${ COLORS.HYDRO_BLUE }
-    image: 
-      url: "https://i2.wp.com/keqingmains.com/wp-content/uploads/2021/10/kqm-logo-full-e1633177025729.png?fit=180%2C143&ssl=1"
+    description: "Click the buttons below to open the resources!"
     thumbnail:
       url: "https://muakasan.github.io/genshin-portraits/assets/UI_AvatarIcon_Mona.png"
     description: |-
       
 
 buttons:
+  - label: "Build"
+    customId: "liveInteraction#characters/hydro/mona/build"
+    emoji: <:Element_Hydro:945557264314544139>
+    style: "PRIMARY"
+
   - label: "Guide"
     url: "https://keqingmains.com/mona"
     emoji: "logont:945530991240421386"
